<resources>
    <string name="app_name">No waste.</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Attività</string>
    <string name="title_notifications">Notifiche</string>
    <string name="title_search">Ricerca</string>
    <string name="title_user">User</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="tab_text_1">Sezione uno - annunci pubblicati</string>
    <string name="tab_text_2">Sezione due - preferiti</string>
    <string name="text_dashboard_1">Annunci attivi</string>
    <string name="text_dashboard_2">Annunci </string>
    <string name="active_adv">active adv</string>
    <string name="go_to_sign_in">go to login</string>
    <string name="tbd">tbd</string>
    <string name="name">Name</string>
    <string name="compila_i_campi_per_inserire_un_nuovo_annuncio">Compila i campi per inserire un nuovo annuncio</string>
    <string name="save">Salva prodotto</string>
    <string name="todo">TODO</string>
    <string name="insert_account_mail">Insert account mail</string>
    <string name="insert_e_mail_address">Insert e-mail address</string>
    <string name="insert_account_password">insert account password</string>
    <string name="insert_password">Insert password</string>
    <string name="log_in">Log In</string>
    <string name="sign_in">Sign in</string>
    <string name="save_info">Save</string>
    <string name="inserisci_lo_username">Inserisci lo username</string>
    <string name="inserisci_l_indirizzo">Inserisci l\'indirizzo</string>
    <string name="inserisci_il_numero_telefono">Inserisci il numero telefono</string>
    <string name="modifica_gli_orari_di_disponibilit">Modifica gli orari di disponibilità</string>
    <string name="lunedi">Lunedì</string>
    <string name="nuovo_orario">nuovo orario</string>
    <string name="insert_password_once_again">Insert password once again</string>
    <string name="sign_up">Sign up</string>
    <string name="inserisci_il_nome_del_prodotto">Inserisci il nome del prodotto</string>
    <string name="inserisci_la_quantit_del_prodotto">Inserisci la quantità del prodotto</string>
    <string name="inserisci_la_scadenza_del_prodotto">Inserisci la scadenza del prodotto</string>
    <string name="benvenuto">Benvenuto,</string>
    <string name="questi_sono_tutti_gli_annunci_disponibili_per_te">Questi sono tutti gli annunci disponibili per te!</string>
    <string name="cerca_un_prodotto">Cerca un prodotto</string>
    <string name="nome_utente">Nome utente</string>
    <string name="email">email</string>
    <string name="address">address</string>
    <string name="telephone_number">telephone number</string>
    <string name="orari_di_disponibilit">Orari di disponibilità</string>
    <string name="luned">Lunedì</string>
    <string name="prodotto">Prodotto:</string>
    <string name="quantit">Quantità:</string>
    <string name="scadenza">Scadenza:</string>
    <string name="vai_all_utente">Vai all\'utente</string>
    <string name="elimina">Elimina</string>
    <string name="ricerca">Ricerca</string>
    <string name="utente">Utente</string>
    <string name="scrivi_qui_la_tua_recensione">Scrivi qui la tua recensione</string>
    <string name="recensisci">Recensisci</string>
    <string name="orario_di_luned">orario di lunedì</string>
    <string name="marted">Martedì</string>
    <string name="mercoled">Mercoledì</string>
    <string name="orario_di_marted">orario di martedì</string>
    <string name="orario_di_mercoled">orario di mercoledì</string>
    <string name="gioved">Giovedì</string>
    <string name="orario_di_venerd">orario di venerdì</string>
    <string name="venerd">Venerdì</string>
    <string name="orario_di_gioved">orario di giovedì</string>
    <string name="sabato">Sabato</string>
    <string name="orario_di_sabato">orario di sabato</string>
    <string name="domenica">Domenica</string>
    <string name="orario_di_domenica">orario di domenica</string>
    <string name="richieste">Richieste totali:</string>
    <string name="vedi_tutte">Vedi tutte</string>
    <string name="ordina">Ordina</string>
    <string name="accetta">Accetta</string>
    <string name="nome_del_cliente">nome del cliente</string>
    <string name="invia_ordine">Invia ordine</string>
    <string name="inserisci_qui_quando_vuoi_ritirare_il_prodotto">Inserisci qui quando vuoi ritirare il prodotto</string>
    <string name="inserisci_qui_un_messaggio_per_il_venditore">Inserisci qui un messaggio per il venditore</string>
    <string name="riepilogo_della_richiesta">Riepilogo della richiesta:</string>
    <string name="ritirato">Ritirato!</string>
    <string name="usufruitore">Usufruitore:</string>
    <string name="stato_annuncio">Stato annuncio:</string>
    <string name="inserisci_una_recensione">Inserisci una recensione!</string>
    <string name="nuovo_adv">Nuovo adv</string>
    <string name="recensisci_l_utente_ed_il_suo_prodotto">Recensisci l\'utente ed il suo prodotto</string>
    <string name="citt">Città</string>
    <string name="inserisci_la_citt">Inserisci la città</string>
    <string name="info" />
    <string name="informazioni">"
        I prodotti per i quali possono essere creati gli annunci devono essere confezionati, mantenuti correttamente, alla giusta temperatura.

        I prodotti devono essere in scadenza, non scaduti e non marcescenti.


        Affidiamo a voi il buon senso di garantire al prossimo la massima qualità del prodotto per rendere profiquo il funzionamento del servizio."</string>

</resources>