<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_addadv"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_addadv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="150dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/raleway"
            android:text="@string/compila_i_campi_per_inserire_un_nuovo_annuncio"
            android:textAlignment="center"
            android:textSize="20sp"

            />

        <ImageButton
            android:id="@+id/btninfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:background="@drawable/buttons"
            android:contentDescription="@string/info"
            app:srcCompat="@drawable/ic_baseline_priority_high_24"

            />

        <EditText
            android:id="@+id/addv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="25dp"
            android:autofillHints="@string/inserisci_il_nome_del_prodotto"
            android:hint="@string/inserisci_il_nome_del_prodotto"
            android:inputType="text" />

        <EditText
            android:id="@+id/addv_qty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="25dp"
            android:autofillHints="@string/inserisci_la_quantit_del_prodotto"
            android:hint="@string/inserisci_la_quantit_del_prodotto"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/addv_expiration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="25dp"
            android:autofillHints="scadenza"
            android:hint="@string/inserisci_la_scadenza_del_prodotto"
            android:inputType="date" />

        <Button
            android:id="@+id/addv_save"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:background="@drawable/buttons"
            android:text="@string/save"
            android:textColor="@color/color15" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/addv_progressbar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="@color/color12"/>

</androidx.constraintlayout.widget.ConstraintLayout>