<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="228dp"
            android:visibility="visible"
            tools:srcCompat="@tools:sample/backgrounds/scenic"
            tools:visibility="visible"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/edit_text_registration_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:hint="@string/insert_e_mail_address"
            android:inputType="textEmailAddress"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:autofillHints="@string/insert_account_mail" />

        <EditText
            android:id="@+id/edit_text_register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:hint="@string/insert_password"
            android:inputType="textPassword"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:autofillHints="@string/insert_password" />

        <EditText
            android:id="@+id/edit_text_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:hint="@string/insert_password_once_again"
            android:inputType="textPassword"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/button_sign_up"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@drawable/buttons"
            android:text="@string/sign_up"
            android:textColor="@color/color15" />

        <Button
            android:id="@+id/button_go_to_sign_in"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/go_to_sign_in"
            android:background="@drawable/buttons"
            android:textColor="@color/color15"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            />


    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressbar_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="@color/color12"/>
</RelativeLayout>