<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/color15"
        android:paddingEnd="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="8dp">

            <LinearLayout
                android:id="@+id/containerhorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/prodotti"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="275dp"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/lblnomeprod"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:layout_marginTop="12dp"
                            android:text="@string/prodotto" />

                        <TextView
                            android:id="@+id/productname"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="18dp"
                            android:layout_marginTop="12dp"
                            />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="275dp"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/lblquantita"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:layout_marginTop="15dp"
                            android:text="@string/quantit" />


                        <TextView
                            android:id="@+id/productquantity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="15dp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="275dp"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/lblscadenza"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:layout_marginTop="15dp"
                            android:text="@string/scadenza" />

                        <TextView
                            android:id="@+id/productexpire"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="15dp" />

                    </LinearLayout>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical"
                    android:paddingEnd="10dp">

                    <Button
                        android:id="@+id/button3"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/buttons"
                        android:text="@string/elimina"
                        android:textColor="@color/color15" />

                    <Button
                        android:id="@+id/button4"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/buttons"
                        android:text="@string/ordina"
                        android:textColor="@color/color15" />
                </LinearLayout>





            </LinearLayout>


            <LinearLayout
                android:id="@+id/user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/productauthor"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="10dp">

                    <Button
                        android:id="@+id/btngotouser"
                        android:layout_width="wrap_content"
                        android:layout_height="36dp"
                        android:layout_marginStart="25dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/buttons"
                        android:paddingEnd="10dp"
                        android:text="@string/vai_all_utente"
                        android:textColor="@color/color15"
                        android:textSize="15sp" />
                </RelativeLayout>

            </LinearLayout>



        </LinearLayout>


    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>